hphp/hack/test/typecheck/lambda/hhvm_lambda7.php.like_types.exp
File "hhvm_lambda7.php", line 52, characters 26-31:
Typing error (Typing[4323])
File "collections/Vector.hhi", line 202, characters 23-24:
Some type constraint(s) are violated here
File "collections/Vector.hhi", line 202, characters 23-24:
Tu is a constrained type parameter
File "hhvm_lambda7.php", line 52, characters 26-27:
Expected int because this is used in an arithmetic operation
File "collections/Vector.hhi", line 202, characters 23-24:
But got dynamic
